--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
-    <link href="Header.css" rel="stylesheet">
+    <link href="/Header.css" rel="stylesheet">
     <title>Internet Shop Shoes</title>
 </head>
 <body>
@@ -18,9 +18,9 @@
                     <div id="blockNav">
                         <nav>
                         <ul>
-                            <li><button class="btn"><a href="../Header/Header.html">Home</a></button></li>
-                            <li><button class="btn"><a href="../Cart/Cart.html">Cart</a></button></li>
-                            <li><button class="btn"><a href="../Main/Main.html">Shop</a></button></li>
+                            <li><button class="btn"><a href="/Index.html">Home</a></button></li>
+                            <li><button class="btn"><a href="/Cart.html">Cart</a></button></li>
+                            <li><button class="btn"><a href="Main.html">Shop</a></button></li>
                         </ul>
                         </nav>
                     </div>
@@ -36,7 +36,7 @@
         <span id="promoText">%%% PROMO 25 %%%</span>
        
     </div>
-    <script src="Main.js"></script>
+    <script src="/Main.js"></script>
 
 </body>
 </html>
