--- a/Cart.html
+++ b/Cart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="Cart.css" rel="stylesheet">
+    <link href="/Cart.css" rel="stylesheet">
     <title>Cart</title>
 </head>
 <body>
@@ -17,13 +17,13 @@
             
             <div class="pagin">
                 <ul>
-                   <li><a href="../Header/Header.html">Home</a></li>
-                    <li><a href="../Cart/Cart.html">Cart</a></li>
+                   <li><a href="/Index.html">Home</a></li>
+                    <li><a href="/Cart.html">Cart</a></li>
                 </ul>
             </div>
 
             <div class="cart">
-                <a href="/Cart/Cart.html">
+                <a href="/Cart.html">
                 <ion-icon name="basket"></ion-icon>Cart
                 <span>0</span>
                 </a>
@@ -44,7 +44,7 @@
 
 </body>
 
-    <script src="../Main/Main.js"></script>
+    <script src="/Main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </html>
