--- a/Main2.html
+++ b/Main2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport">
-    <link href="Main2.css" rel="stylesheet">
+    <link href="/Main2.css" rel="stylesheet">
     
     <title>Shop page 2</title>
 </head>
@@ -11,7 +11,7 @@
 
   <div class="pagin">
     <ol>
-        <li><a href="../Header/Header.html">Home</a></li> 
+        <li><a href="/Index.html">Home</a></li> 
         <li><a href="#">Shop</a></li>
         <li><a href="#">Page 2</a></li>
     </ol>
@@ -20,7 +20,7 @@
   <div id="pageNavigation">
     <ol id="pagination">
       <li><a href="#">«</a></li>
-      <li><a href="../Main/Main.html">1</a></li>
+      <li><a href="/Main.html">1</a></li>
       <li><a href="#">2</a></li>
       <li><a href="#">»</a></li>
     </ol> 
@@ -162,7 +162,7 @@
             </div>
           </li>
     </ul>
-    <script src="Main2.js"></script>
+    <script src="/Main2.js"></script>
 
 </body>
 </html>
