--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
                         <ul>
                             <li><button class="btn"><a href="/Index.html">Home</a></button></li>
                             <li><button class="btn"><a href="/Cart.html">Cart</a></button></li>
-                            <li><button class="btn"><a href="Main.html">Shop</a></button></li>
+                            <li><button class="btn"><a href="/Main.html">Shop</a></button></li>
                         </ul>
                         </nav>
                     </div>
