Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div id="blockNav">
                         <nav>
                         <ul>
-                            <li><button class="btn"><a href="/Index.html">Home</a></button></li>
+                            <li><button class="btn"><a href="/index.html">Home</a></button></li>
                             <li><button class="btn"><a href="/Cart.html">Cart</a></button></li>
                             <li><button class="btn"><a href="/Main.html">Shop</a></button></li>
                         </ul>
