--- a/Main.html
+++ b/Main.html
@@ -11,7 +11,7 @@
 
   <div class="pagin">
     <ol>
-        <li><a href="../Header/Header.html">Home</a></li> 
+        <li><a href="/index.html">Home</a></li> 
         <li><a href="#">Shop</a></li>
         <li><a href="#">Page 1</a></li>
     </ol>
