--- a/Cart.html
+++ b/Cart.html
@@ -17,7 +17,7 @@
             
             <div class="pagin">
                 <ul>
-                   <li><a href="/Index.html">Home</a></li>
+                   <li><a href="/index.html">Home</a></li>
                     <li><a href="/Cart.html">Cart</a></li>
                 </ul>
             </div>
