--- a/Main2.html
+++ b/Main2.html
@@ -11,7 +11,7 @@
 
   <div class="pagin">
     <ol>
-        <li><a href="/Index.html">Home</a></li> 
+        <li><a href="/index.html">Home</a></li> 
         <li><a href="#">Shop</a></li>
         <li><a href="#">Page 2</a></li>
     </ol>
