--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                     <div id="blockNav">
                         <nav>
                         <ul>
-                            <li><button class="btn"><a href="/index.html">Home</a></button></li>
-                            <li><button class="btn"><a href="/Cart.html">Cart</a></button></li>
-                            <li><button class="btn"><a href="/Main.html">Shop</a></button></li>
+                            <li><button class="btn"><a href="index.html">Home</a></button></li>
+                            <li><button class="btn"><a href="Cart.html">Cart</a></button></li>
+                            <li><button class="btn"><a href="Main.html">Shop</a></button></li>
                         </ul>
                         </nav>
                     </div>
@@ -36,7 +36,7 @@
         <span id="promoText">%%% PROMO 25 %%%</span>
        
     </div>
-    <script src="/Main.js"></script>
+    <script src="Main.js"></script>
 
 </body>
 </html>
