--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport">
-    <link href="/Main.css" rel="stylesheet">
+    <link href="Main.css" rel="stylesheet">
     <title>Shop Page 1</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
 
   <div class="pagin">
     <ol>
-        <li><a href="/index.html">Home</a></li> 
+        <li><a href="index.html">Home</a></li> 
         <li><a href="#">Shop</a></li>
         <li><a href="#">Page 1</a></li>
     </ol>
@@ -20,12 +20,12 @@
         <ol id="pagination">
           <li><a href="#">«</a></li>
           <li><a href="#">1</a></li>
-          <li><a href="/Main2.html">2</a></li>
+          <li><a href="Main2.html">2</a></li>
           <li><a href="#">»</a></li>
         </ol> 
     </div>
     <div class="cart">
-      <a href="/Cart.html">
+      <a href="Cart.html">
         <ion-icon name="basket"></ion-icon>Cart
         <span>0</span>
       </a>
@@ -161,7 +161,7 @@
             </div>
           </li>
     </ul>
-    <script src="/Main.js"></script>
+    <script src="Main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
