--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <link href="Header.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
     <title>Internet Shop Shoes</title>
 </head>
 <body>
@@ -32,6 +33,16 @@
                     </div>
         </div>
     </header>
+    <div class="carousel-container">
+    <i class="fas fa-arrow-left" id="prevBtn"></i>
+    <i class="fas fa-arrow-right" id="nextBtn"></i>
+    <div class="carousel-slide">
+        <img src="https://drive.google.com/uc?export=view&id=1Sw-tsVyFig89IoMx9LFOnJs8z6WSw0sM" width="300px" id="lastClone" alt="Shoe">
+        <img src="https://drive.google.com/uc?export=view&id=13ezIQy2FKurmFM-sxB7RPKpquOtaVXpJ" width="300px" alt="Shoe">
+        <img src="https://drive.google.com/uc?export=view&id=1b9rzo6xcWczaWPg8YEbVBZXI8xKtEkdN" width="300px" alt="Shoe">
+        <img src="https://drive.google.com/uc?export=view&id=1Sw-tsVyFig89IoMx9LFOnJs8z6WSw0sM" width="300px" alt="Shoe">
+        <img src="https://drive.google.com/uc?export=view&id=13ezIQy2FKurmFM-sxB7RPKpquOtaVXpJ" width="300px" id="firstClone" alt="Shoe">
+    </div>
     <div id="promoContainer">
         <span id="promoText">%%% PROMO 25 %%%</span>
        
