--- a/index.html
+++ b/index.html
@@ -34,14 +34,15 @@
         </div>
     </header>
     <div class="carousel-container">
-    <i class="fas fa-arrow-left" id="prevBtn"></i>
-    <i class="fas fa-arrow-right" id="nextBtn"></i>
-    <div class="carousel-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1Sw-tsVyFig89IoMx9LFOnJs8z6WSw0sM" width="300px" id="lastClone" alt="Shoe">
-        <img src="https://drive.google.com/uc?export=view&id=13ezIQy2FKurmFM-sxB7RPKpquOtaVXpJ" width="300px" alt="Shoe">
-        <img src="https://drive.google.com/uc?export=view&id=1b9rzo6xcWczaWPg8YEbVBZXI8xKtEkdN" width="300px" alt="Shoe">
-        <img src="https://drive.google.com/uc?export=view&id=1Sw-tsVyFig89IoMx9LFOnJs8z6WSw0sM" width="300px" alt="Shoe">
-        <img src="https://drive.google.com/uc?export=view&id=13ezIQy2FKurmFM-sxB7RPKpquOtaVXpJ" width="300px" id="firstClone" alt="Shoe">
+        <i class="fas fa-arrow-left" id="prevBtn"></i>
+        <i class="fas fa-arrow-right" id="nextBtn"></i>
+        <div class="carousel-slide">
+            <img src="https://drive.google.com/uc?export=view&id=1Sw-tsVyFig89IoMx9LFOnJs8z6WSw0sM" width="300px" id="lastClone" alt="Shoe">
+            <img src="https://drive.google.com/uc?export=view&id=13ezIQy2FKurmFM-sxB7RPKpquOtaVXpJ" width="300px" alt="Shoe">
+            <img src="https://drive.google.com/uc?export=view&id=1b9rzo6xcWczaWPg8YEbVBZXI8xKtEkdN" width="300px" alt="Shoe">
+            <img src="https://drive.google.com/uc?export=view&id=1Sw-tsVyFig89IoMx9LFOnJs8z6WSw0sM" width="300px" alt="Shoe">
+            <img src="https://drive.google.com/uc?export=view&id=13ezIQy2FKurmFM-sxB7RPKpquOtaVXpJ" width="300px" id="firstClone" alt="Shoe">
+        </div>
     </div>
     <div id="promoContainer">
         <span id="promoText">%%% PROMO 25 %%%</span>
